k8s/prometheus/prometheus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-server
                port:
                  number: 80


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: prometheus-ingress
#   namespace: monitoring
#   annotations:
#     # kubernetes.io/ingress.class: alb
#     alb.ingress.kubernetes.io/target-type: ip
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/subnets: subnet-0ef22b70e66510b96, subnet-0a8409943c90369c9
# spec:
#   ingressClassName: alb
#   rules:
#   - host: k8s-monitori-promethe-f35b50c2ac-1262279187.us-east-1.elb.amazonaws.com
#     http:
#       paths:
#         - path: /prometheus(/|$)(.*)
#           pathType: Prefix
#           backend:
#             service:
#               name: prometheus-server
#               port:
#                 number: 80
